# rust-lab

./: .gitignore  Cargo.toml  README.md
.github/: renovate.json
scripts/: create_experiment.sh  create_topic.sh
topics/cargo-bench/: Cargo.toml  README.md
topics/cargo-bench/benches/: fib_benchmark.rs  fib_benchmark_v02.rs  my_benchmark.rs
topics/crate-axum-opentelemetry/: Cargo.toml  README.md  docker-compose.yml
topics/crate-axum-opentelemetry/src/: main.rs  open_telemetry.rs
topics/rust-concurrent-programming/: Cargo.toml  README.md
topics/rust-concurrent-programming/examples/: e01-simple-spawn.rs  e02-vu-tokio.rs
topics/rust-error-handling/: Cargo.toml  README.md
topics/rust-error-handling/examples/: e01-basic-error.rs  e02-thiserror.rs  e03-anyhow.rs  e04-anyhow-context.rs
topics/rust-error-mgt/: README.md
topics/rust-ownership-references-borrowing/: Cargo.toml  README.md
topics/rust-ownership-references-borrowing/examples/: e01-borrowing.rs
topics/rust-smart-pointers/: Cargo.toml  README.md
topics/rust-smart-pointers/examples/: basic.rs  e01-box.rs  e02-box.rs  e03-rc.rs
