[package]
name = "rust-lab"
version = "0.1.0"
edition = "2021"

[dependencies]

[workspace]
members = [
    "topics/cargo-bench",
    "topics/crate-axum-opentelemetry",
    "topics/rust-concurrent-programming",
    "topics/rust-error-handling",
    "topics/rust-ownership-references-borrowing",
    "topics/rust-smart-pointers",
]
