[package]
name = "cargo-bench"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
criterion = "=0.6.0" # or a more recent version

[[bench]]
name = "my_benchmark"
harness = false       # Disables the default test harness to use Criterion

[[bench]]
name = "fib_benchmark"
harness = false

[[bench]]
name = "fib_benchmark_v02"
harness = false
