[package]
name = "crate-axum-opentelemetry"
version = "0.1.2"
edition = "2021"

[dependencies]
axum = "0.8.8"
axum-tracing-opentelemetry = "0.32.3"
tokio = { version = "1.49.0", features = ["full"] }
rand = "0.9.2"


opentelemetry = { version = "0.31.0", features = [
    "trace",
    "metrics",
    "logs",
    "internal-logs",
] }
opentelemetry-otlp = { version = "0.31.0", features = [
    "grpc-tonic",
    "metrics",
    "trace",
    "logs",
] }
opentelemetry-semantic-conventions = { version = "0.31.0", features = [
    "semconv_experimental",
] }
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.22" }
# New dependencie for otlp sdk
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
tracing-core = "0.1.36"
