[package]
name = "crate-axum-opentelemetry"
version = "0.1.2"
edition = "2021"

[dependencies]
axum = "0.8.9"
axum-tracing-opentelemetry = "0.33.1"
tokio = { version = "1.52.2", features = ["full"] }
rand = "0.10.1"


opentelemetry = { version = "0.31.0", features = [
    "trace",
    "metrics",
    "logs",
    "internal-logs",
] }
opentelemetry-otlp = { version = "0.31.1", features = [
    "grpc-tonic",
    "metrics",
    "trace",
    "logs",
] }
opentelemetry-semantic-conventions = { version = "0.31.0", features = [
    "semconv_experimental",
] }
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.23" }
# New dependencie for otlp sdk
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
tracing-core = "0.1.36"
